<resources>
    <string name="app_name">Food Recommendation Apps</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="select_date">Tanggal Makan</string>
    <string name="select_time">Waktu Makan</string>
    <string name="recommended_foods_title">10 rekomendasi teratasmu</string>
    <string name="recommended_foods_subtitle">(Klik untuk menambah makanan/minuman ke daftar dikonsumsi)</string>
    <string name="food_consumed">Makanan/Minuman dikonsumsi:</string>
    <string name="add_more">Tambah makanan</string>
    <string name="submit">Kirim</string>
    <string name="select_food">Pilih makanan</string>
    <string name="portion_type">Pilih porsi makanan</string>
    <string name="portion_size">Banyak porsi</string>
    <string name="percentage">Persentase termakan</string>
    <string name="delete">hapus</string>
    <string name="add">Pilih Makanan</string>
</resources>